<resources>
    <string name="app_name">Conduit_client_tesT_001</string>
    <string name="start">启动</string>
    <string name="stop">停止</string>
    <string name="log">日志:</string>
    <string name="logtip">日志显示在这里...</string>
    <string name="test_get">测试获取流，流保存在/sdcard/test_stream.hz中:</string>
    <string name="inputstream">输入媒体类型：0-视频，１-音频, 为默认为１"</string>
    <string name="eventstips">输入事件，多个事件用;分隔。默认值:event</string>
    <string name="monevent">监听事件</string>
    <string name="eventtips">输入发送事件,event</string>
    <string name="eventconenttips">输入事件对应发送内容,{"data":"test 001"}</string>
    <string name="sendevent">发送事件，在log显示结果</string>
    <string name="modulenametips">输入模块名。不填写的默认值：hzaudio</string>
    <string name="moduletips">输入方法名.不填写的默认值：call</string>
    <string name="sendcontenttips">发送内容,不填写默认值：{"command":"test"} 模块名与方法名可以通过命令 hzbus -s /tmp/hzbusd -v list 查看</string>
    <string name="normalcall">普通调用，在log显示结果</string>
</resources>
